--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -84,9 +84,9 @@ body {
 
   <nav>
     <a href="/movie/new">最新更新</a>
-    <a href="/CN_AV">国产AV</a>
-    <a href="/actress">国产女优</a>
-    <a href="/company">A片出品厂</a>
+    <a href="/CN_AV/chinese_AV">国产AV</a>
+    <a href="/CN_AV/actress">国产女优</a>
+    <a href="/CN_AV/company">A片出品厂</a>
     <a href="https://t.me/yunvgongCNAV" target="_blank">御女宫国产AV电报群</a>
   </nav>
 </div>
